# biosift

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
biosift/: demo_data.py  document_parser.py  exporter.py  mapper.py  models.py  normalizer.py  profiler.py  validators.py
tests/: test_biosift.py
