[project]
name = "biosift"
version = "0.1.0"
description = "Privacy-preserving biomedical metadata curation: local-only data handling with Claude-assisted column mapping."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), import sorting (I), pyupgrade (UP),
# and a subset of flake8-bugbear (B).
select = ["E", "F", "I", "UP", "B"]
# Long strings (LLM prompts, markdown blocks) are intentional; the formatter
# governs code line length.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
